<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dank.memes.concreteaggregator.MainActivity">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_text"
        android:textSize="26sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/main_concrete"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/concrete"
        android:textSize="26sp"
        android:layout_marginBottom="25dp"
        android:padding="20dp"/>
    <Button
        android:id="@+id/main_mortar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mortar"
        android:textSize="26sp"
        android:padding="20dp"/>

</LinearLayout>
